crates/rome_js_formatter/tests/specs/prettier/js/module-blocks/module-blocks.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\module-blocks\\module-blocks.js"
---

# Input

```js
module { await 3 };

class B {
  #p() {
    module {
      class C { [this.#p]; }
    };
  }
}

const m = module {
  export const foo = "foo";
  export { foo };
};

module {
  export { foo }
};

const m = module       {};

const worker = new Worker(module {
  export const foo = "foo";
});

let m = module {
  module {
    export let foo = "foo";
  };
};

const m = module { export const foo = "foo" };

let moduleBlock = module { export let y = 1; };

foo(module { export let foo = "foo"; });

let m = module { /* foo */ };
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,50 +1,60 @@
-module {
+module;
+{
   await 3;
-};
+}
 
 class B {
   #p() {
-    module {
+    module;
+    {
       class C {
         [this.#p];
       }
-    };
+    }
   }
 }
 
-const m = module {
+const m = module;
+{
   export const foo = "foo";
   export { foo };
-};
+}
 
-module {
-  export { foo };
-};
+module;
+{
+  export { foo }
+}
 
-const m = module {};
+const m = module;
+{
+}
 
 const worker = new Worker(module {
   export const foo = "foo";
-});
+})
 
-let m = module {
-  module {
+let m = module;
+{
+  module;
+  {
     export let foo = "foo";
-  };
-};
+  }
+}
 
-const m = module {
-  export const foo = "foo";
-};
+const m = module;
+{
+  export const foo = "foo"
+}
 
-let moduleBlock = module {
+let moduleBlock = module;
+{
   export let y = 1;
-};
+}
 
-foo(module {
-  export let foo = "foo";
-});
+foo(module { export let foo = "foo";
+})
 
-let m = module {
+let m = module;
+{
   /* foo */
-};
+}
```

# Output

```js
module;
{
  await 3;
}

class B {
  #p() {
    module;
    {
      class C {
        [this.#p];
      }
    }
  }
}

const m = module;
{
  export const foo = "foo";
  export { foo };
}

module;
{
  export { foo }
}

const m = module;
{
}

const worker = new Worker(module {
  export const foo = "foo";
})

let m = module;
{
  module;
  {
    export let foo = "foo";
  }
}

const m = module;
{
  export const foo = "foo"
}

let moduleBlock = module;
{
  export let y = 1;
}

foo(module { export let foo = "foo";
})

let m = module;
{
  /* foo */
}
```


# Errors
```
module-blocks.js:1:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module-blocks.js:1:8
    │
  1 │ module { await 3 };
    │        ^
  
  i ...Which is required to end this statement
  
    ┌─ module-blocks.js:1:1
    │
  1 │ module { await 3 };
    │ ^^^^^^^^
  
module-blocks.js:5:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ module-blocks.js:5:12
    │
  5 │     module {
    │            ^
  
  i ...Which is required to end this statement
  
    ┌─ module-blocks.js:5:5
    │
  5 │     module {
    │     ^^^^^^^^
  
module-blocks.js:11:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:11:18
     │
  11 │ const m = module {
     │                  ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:11:1
     │
  11 │ const m = module {
     │ ^^^^^^^^^^^^^^^^^
  
module-blocks.js:12:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
     ┌─ module-blocks.js:12:3
     │
  12 │   export const foo = "foo";
     │   ^^^^^^^^^^^^^^^^^^^^^^^^^
  
module-blocks.js:13:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
     ┌─ module-blocks.js:13:3
     │
  13 │   export { foo };
     │   ^^^^^^^^^^^^^^^
  
module-blocks.js:16:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:16:8
     │
  16 │ module {
     │        ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:16:1
     │
  16 │ module {
     │ ^^^^^^^^
  
module-blocks.js:17:3 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
     ┌─ module-blocks.js:17:3
     │
  17 │   export { foo }
     │   ^^^^^^^^^^^^^^
  
module-blocks.js:20:24 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:20:24
     │
  20 │ const m = module       {};
     │                        ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:20:1
     │
  20 │ const m = module       {};
     │ ^^^^^^^^^^^^^^^^^^^^^^^
  
module-blocks.js:22:34 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `{`
  
  × unexpected
  
     ┌─ module-blocks.js:22:34
     │
  22 │ const worker = new Worker(module {
     │                                  ^
  
module-blocks.js:23:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `const`
  
  × unexpected
  
     ┌─ module-blocks.js:23:10
     │
  23 │   export const foo = "foo";
     │          ^^^^^
  
module-blocks.js:23:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `foo`
  
  × unexpected
  
     ┌─ module-blocks.js:23:16
     │
  23 │   export const foo = "foo";
     │                ^^^
  
module-blocks.js:23:27 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `;`
  
  × unexpected
  
     ┌─ module-blocks.js:23:27
     │
  23 │   export const foo = "foo";
     │                           ^
  
module-blocks.js:24:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '})'
  
  × Expected a statement here
  
     ┌─ module-blocks.js:24:1
     │
  24 │ });
     │ ^^
  
module-blocks.js:26:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:26:16
     │
  26 │ let m = module {
     │                ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:26:1
     │
  26 │ let m = module {
     │ ^^^^^^^^^^^^^^^
  
module-blocks.js:27:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:27:10
     │
  27 │   module {
     │          ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:27:3
     │
  27 │   module {
     │   ^^^^^^^^
  
module-blocks.js:28:5 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
     ┌─ module-blocks.js:28:5
     │
  28 │     export let foo = "foo";
     │     ^^^^^^^^^^^^^^^^^^^^^^^
  
module-blocks.js:32:18 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:32:18
     │
  32 │ const m = module { export const foo = "foo" };
     │                  ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:32:1
     │
  32 │ const m = module { export const foo = "foo" };
     │ ^^^^^^^^^^^^^^^^^
  
module-blocks.js:32:20 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
     ┌─ module-blocks.js:32:20
     │
  32 │ const m = module { export const foo = "foo" };
     │                    ^^^^^^^^^^^^^^^^^^^^^^^^
  
module-blocks.js:34:26 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:34:26
     │
  34 │ let moduleBlock = module { export let y = 1; };
     │                          ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:34:1
     │
  34 │ let moduleBlock = module { export let y = 1; };
     │ ^^^^^^^^^^^^^^^^^^^^^^^^^
  
module-blocks.js:34:28 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Illegal use of an export declaration not at the top level
  
  × move this declaration to the top level
  
     ┌─ module-blocks.js:34:28
     │
  34 │ let moduleBlock = module { export let y = 1; };
     │                            ^^^^^^^^^^^^^^^^^
  
module-blocks.js:36:12 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `{`
  
  × unexpected
  
     ┌─ module-blocks.js:36:12
     │
  36 │ foo(module { export let foo = "foo"; });
     │            ^
  
module-blocks.js:36:21 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `let`
  
  × unexpected
  
     ┌─ module-blocks.js:36:21
     │
  36 │ foo(module { export let foo = "foo"; });
     │                     ^^^
  
module-blocks.js:36:25 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `foo`
  
  × unexpected
  
     ┌─ module-blocks.js:36:25
     │
  36 │ foo(module { export let foo = "foo"; });
     │                         ^^^
  
module-blocks.js:36:29 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Did you mean to use a `:`? An `=` can only follow a property name when the containing object literal is part of a destructuring pattern.
  
     ┌─ module-blocks.js:36:29
     │
  36 │ foo(module { export let foo = "foo"; });
     │                             ^
  
module-blocks.js:36:36 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `;`
  
  × unexpected
  
     ┌─ module-blocks.js:36:36
     │
  36 │ foo(module { export let foo = "foo"; });
     │                                    ^
  
module-blocks.js:36:38 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '})'
  
  × Expected a statement here
  
     ┌─ module-blocks.js:36:38
     │
  36 │ foo(module { export let foo = "foo"; });
     │                                      ^^
  
module-blocks.js:38:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
     ┌─ module-blocks.js:38:16
     │
  38 │ let m = module { /* foo */ };
     │                ^
  
  i ...Which is required to end this statement
  
     ┌─ module-blocks.js:38:1
     │
  38 │ let m = module { /* foo */ };
     │ ^^^^^^^^^^^^^^^
  

```


